build(webpack): add webpack for development and build

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,6 @@
     You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
-</body>
+<script type="text/javascript" src="vendors.646eddbd.js"></script><script type="text/javascript" src="app.bab71a33.js"></script></body>
 
 </html>
