build(webpack): add url-loader and file-loader
#1

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>react-redux-rxjs</title>
+  <link rel="shortcut icon" href="/react-redux-rxjs/assets/img/favicon.ico">
   <style>
     html {
       height: 100%;
@@ -15,6 +16,17 @@
       margin: 0;
       padding: 0;
       height: 100%;
+    }
+
+    @font-face {
+      font-family: 'Material Icons';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Material Icons'),
+      local('MaterialIcons-Regular'),
+      url("/react-redux-rxjs/assets/font/Material-Icons/MaterialIcons-Regular.woff2") format("woff2"),
+      url("/react-redux-rxjs/assets/font/Material-Icons/MaterialIcons-Regular.woff") format("woff"),
+      url("/react-redux-rxjs/assets/font/Material-Icons/MaterialIcons-Regular.ttf") format("truetype");
     }
 
     #root {
